<resources>
    <string name="app_name">Snickers</string>
    <string name="error_toast">error</string>
    <string name="success_toast">success</string>
    <string name="info_toast">info</string>
    <string name="warning_toast">warning</string>
    <string name="normal_toast_without_icon">simple</string>
    <string name="info_toast_with_formatting">INFORMATION</string>
    <string name="error_message">ERROE</string>
    <string name="success_message">SUCCESS</string>
    <string name="info_message">INFO</string>
    <string name="warning_message">WARN</string>
    <string name="normal_message_without_icon">SIMPLE</string>
    <string name="simple_chocobar">Simple ChocoBar</string>
    <string name="green_chocobar">Green ChocoBar</string>
    <string name="orange_chocobar">Orange ChocoBar</string>
    <string name="cyan_chocobar">Cyan ChocoBar</string>
    <string name="red_chocobar">Red ChocoBar</string>
    <string name="customized_chocobar">Customized ChocoBar</string>
    <string name="gray_good_chocobar">GRAY GOOD CHOCOBAR</string>
    <string name="gray_bad_chocobar">GRAY BAD CHOCOBAR</string>
    <string name="black_chocobar">BLACK CHOCOBAR</string>
    <string name="love_chocobar">Love Chocobar</string>
    <string name="blocked_chocobar">Blocked Chocobar</string>
    <string name="notifications_on">NOTIFICATIONS ON</string>
    <string name="next">Next View</string>
    <string name="previous">Previous View</string>
    <string name="chocobar">ChocoBar</string>
    <string name="chocobar_kotlin">ChocoBar Kotlin</string>
    <string name="kotlin_icon">Kotlin icon</string>
    <string name="java_icon">java icon</string>
    <string name="info_gray">Info Gray Chocobar</string>
    <string name="custom_tint">Custom Icon Color</string>
</resources>
