<?xml version="1.0" encoding="utf-8"?>
<android.support.design.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/content_example"
    tools:context="com.pd.snickers.MainActivity">

    <Button
        android:text="@string/simple_chocobar"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/button_default"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_success"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"/>

    <Button
        android:text="@string/green_chocobar"

        android:layout_height="wrap_content"
        android:layout_below="@+id/button_default"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_success"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/button_default"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_info"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/orange_chocobar"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_success"
        android:id="@+id/button_info"
        app:layout_constraintTop_toBottomOf="@+id/button_success"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_warning"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/cyan_chocobar"

        android:layout_height="wrap_content"
        android:layout_below="@+id/button_info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button_warning"
        app:layout_constraintTop_toBottomOf="@+id/button_info"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_error"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/red_chocobar"

        android:layout_height="wrap_content"
        android:layout_below="@+id/button_warning"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_error"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/button_warning"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_custom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/gray_good_chocobar"

        android:layout_height="wrap_content"
        android:layout_below="@+id/button_error"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_good"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/button_error"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_custom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/gray_bad_chocobar"

        android:layout_height="wrap_content"
        android:layout_below="@+id/button_good"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_bad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/button_good"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_custom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="match_parent"/>

    <Button
        android:text="@string/customized_chocobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_bad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_custom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toBottomOf="@+id/button_bad"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>


</android.support.design.circularreveal.CircularRevealRelativeLayout>